* generate and insert includes into assemblies * generate maven-assembly-plugin config * save add-imports in resource * add plugin_dirs.txt